--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 asgiref==3.9.2
 bcrypt==5.0.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 Django==5.2.6
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+idna==3.11
 mysqlclient==2.2.7
 pillow==11.3.0
+requests==2.32.5
 sqlparse==0.5.3
 tzdata==2025.2
+urllib3==2.5.0
 wheel==0.45.1
